# tap-googleads

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_googleads/: auth.py  client.py  streams.py  tap.py
tap_googleads/schemas/: campaign.json  click_view_report.json  geo_performance.json
tap_googleads/tests/: test_base_credentials.py  test_proxy_oauth.py  utils.py
