[tool.poetry]
name = "tap-googleads"
version = "0.5.0"
description = "`tap-googleads` is a Singer tap for GoogleAds, built with the Meltano SDK for Singer Taps."
authors = ["AutoIDM", "Matatika"]
keywords = [
    "ELT",
    "GoogleAds",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.34.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^23.3"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.31.0"
responses = "0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-googleads = 'tap_googleads.tap:TapGoogleAds.cli'
